2009-06-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test3-2.4:
	  Fix expected output to include [system path] like the others.
	  Fixes the test on 2.4.

2009-06-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test34-2.4:
	  Fix expected output to include [system path] like the others.
	  Fixes the test on 2.4.

2009-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* scripts/delete-duplicate-expected:
	  Also catch when -2.4 and -2.6 are the same, and there's no -2.5

2009-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test88-2.5:
	  Add a 2.5-specific version since whrandom really is gone now.

2009-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/Warning.py:
	  remove sys.path list members from the warning's file path, so that
	  we don't need different expected test outputs for different versions
	  when nothing important has changed.
	* pychecker/checker.py:
	  remove sys.path entries by default.  This could be made configurable
	  if people would still want to see the old behaviour that lists the
	  full path for some errors.
	* test_expected/test3-2.3:
	* test_expected/test3-2.5:
	* test_expected/test3-2.6:
	* test_expected/test34-2.2:
	* test_expected/test34-2.3:
	* test_expected/test34-2.5:
	* test_expected/test34-2.6:
	  Adapt the expected output to the new [system path] output.
	  Removes some hardcoded neils in the process, and fixes 3 and 34
	  on my F9 python 2.5 version.

2009-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_check.sh:
	  Instead of comparing to an exact match for test_expected for our
	  Python version, allow comparing against the newest expected version
	  that is equal to or below our Python version.
	  Avoids needing to add output for test 17 on python 2.5, and fixes
	  test 17 in my python 2.5 test run.

2008-07-29  Thomas Vander Stichele  <thomas at apestaart dot org>
